<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_nz_sz"
    android:clickable="true"
    >

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/icon_nz_diaolg_close"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/game_nz_sz_list"
        android:textColor="#fff"
        android:textSize="16sp"
        />

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@id/title"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_nz_sz_list_item_1"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/game_nz_sz_order"
            android:textColor="#fff"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/game_nz_sz_player"
            android:textColor="#fff"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/game_nz_sz_coin"
            android:textColor="#fff"
            android:textSize="14sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_apply_sz"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_btn_nz_apply_sz"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="16sp"
        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_apply_sz"
        android:layout_below="@id/top"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        />

</RelativeLayout>
