<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@mipmap/bg_hd"
        >

        <ImageView
            android:id="@+id/icon_vs"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:src="@mipmap/icon_hd_vs"
            />

        <LinearLayout
            android:id="@+id/pokers_group"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                >

                <com.feiyu.game.custom.PokerView
                    android:id="@+id/pokers_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:pv_count="5"
                    app:pv_coverSrc="@mipmap/icon_hd_back"
                    />

                <ImageView
                    android:id="@+id/result_1"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    android:visibility="invisible"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/count_down_2"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/icon_hd_countdown"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:visibility="visible"
                />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                >

                <com.feiyu.game.custom.PokerView
                    android:id="@+id/pokers_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:pv_arrow="right"
                    app:pv_count="5"
                    app:pv_coverSrc="@mipmap/icon_hd_back"
                    />

                <ImageView
                    android:id="@+id/result_2"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="fitXY"
                    android:visibility="invisible"
                    />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/role_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/name_1"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/icon_hd_role_name_left"
                    />

                <ImageView
                    android:id="@+id/role_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/icon_hd_role_left"
                    />

                <com.feiyu.game.custom.GameBetCoinView
                    android:id="@+id/score_1"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_hd_coin"
                    android:visibility="gone"
                    app:gbc_marginTop1="16dp"
                    app:gbc_marginTop3="3dp"
                    app:gbc_name="@string/game_hd_role_name_1"
                    app:gbc_textColor="#78552e"
                    app:gbc_textSize="12dp"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                >

                <com.feiyu.game.custom.GameBetCoinView
                    android:id="@+id/score_2"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_hd_coin"
                    android:visibility="gone"
                    app:gbc_marginTop1="16dp"
                    app:gbc_marginTop3="3dp"
                    app:gbc_name="@string/game_hd_role_name_0"
                    app:gbc_textColor="#78552e"
                    app:gbc_textSize="12dp"
                    />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <com.feiyu.game.custom.GameBetCoinView
                    android:id="@+id/score_3"
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_hd_coin"
                    android:visibility="gone"
                    app:gbc_marginTop1="16dp"
                    app:gbc_marginTop3="3dp"
                    app:gbc_name="@string/game_hd_role_name_2"
                    app:gbc_textColor="#78552e"
                    app:gbc_textSize="12dp"
                    />

                <ImageView
                    android:id="@+id/role_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/icon_hd_role_right"
                    />


                <ImageView
                    android:id="@+id/name_2"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/icon_hd_role_name_right"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tip"
            android:layout_width="250dp"
            android:layout_height="24dp"
            android:layout_centerInParent="true"
            android:background="@mipmap/bg_game_tip"
            android:gravity="center"
            android:text="@string/game_wait_start"
            android:textColor="@color/global"
            android:textSize="14sp"

            />

        <TextView
            android:id="@+id/count_down_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="20sp"
            />


        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <ViewStub
        android:id="@+id/view_stub"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout="@layout/game_view_bet"
        />

</LinearLayout>
